...
      />
      <Tabs.Screen
        name="dashboard/[id]"
        options={{
          title: "Rounds",
          href: `/dashboard/${session.user.id}`,
          tabBarButtonTestID: "tab-rounds",
          tabBarIcon: ({ color, size }) => <List size={size} color={color} />,
        }}
      />
      <Tabs.Screen
        name="add"
        options={{
...
